@startuml

entity user {
    id: UUID
    username: VARCHAR
    display_name: VARCHAR
    is_teacher: BOOLEAN
    is_admin: BOOLEAN
    password_hash: VARCHAR
    email: VARCHAR
}

entity participation {
    role: ENUM/VARCHAR
    user_id: UUID
    course_id: UUID
}

entity course {
    id: UUID
    name: VARCHAR
    description: TEXT
}

entity practice {
    id: UUID
    name: VARCHAR
    description: TEXT

    deadline: TIMESTAMP
    soft_deadline: TIMESTAMP

    course_id: UUID
    author: UUID

    languages: ARRAY[INTEGER]
}

entity testcase {
    id: INTEGER
    practice_id: UUID
    input: UUID
    excepted: UUID
    hidden: BOOLEAN
}

entity attempt {
    id: UUID
    status: ENUM/VARCHAR
    linter_score: INTEGER
    language: INTEGER
    practice_id: UUID
    user_id: UUID
    sent_time: TIMESTAMP
}

entity submission {
    id: INTEGER
    runner_id: UUID
    attempt_id: UUID
    test_number: INTEGER
}

user ||--o{ attempt
attempt }o--|| practice
user ||--o{ participation
participation }o--|| course
practice }o-- course
submission }|--|| attempt
testcase }o--|| practice

@enduml